--- a/static/CSS/noticias-cards.css
+++ b/static/CSS/noticias-cards.css
@@ -202,8 +202,18 @@ section {
 
 .form-group input[type="text"],
 .form-group input[type="email"],
-.form-group input[type="password"] {
+.form-group input[type="password"],
+.form-group input[type="url"] {
   width: 100%;
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #e5e5e5;
+  border-radius: 4px;
+}
+
+.form-group input[type="date"],
+.form-group input[type="number"]{
+  width: 50%;
   padding: 8px;
   font-size: 14px;
   border: 1px solid #e5e5e5;
