--- a/static/CSS/crud.css
+++ b/static/CSS/crud.css
@@ -1,11 +1,36 @@
-.contuchi {
-  max-width: 800px;
-  margin: 200px auto 0;
-  padding: 20px;
-  background-color: #ffffff;
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
-table {
+#app {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.contuchi {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 800px;
+  width: 100%;
+}
+
+
+.botonn {
+  margin-bottom: 20px;
+}
+
+.tabla-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.table {
     font-family: sans-serif;
   }
   table th, table td {
@@ -24,7 +49,7 @@ table {
   }
   .zigzag {
     border-collapse: separate;
-    border-spacing: 0.25em 1em;
+    border-spacing: 0.1em 0.1em;
   }
   .zigzag tbody tr:nth-child(odd) {
     transform: rotate(0deg);
@@ -32,18 +57,6 @@ table {
   .zigzag thead tr, .zigzag tbody tr:nth-child(even) {
     transform: rotate(-0deg);
   }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -173,8 +186,7 @@ table {
    }
 
    .botonn {
-    position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     padding: 15px 30px;
